@@ -69,61 +69,64 @@
 <div>5: <a href="#camhookMenu">Cam - Player Cam hook menu</a></div>
 </div>
 <div id="menuItem">
-<div>6: <a href="#demosMenu">Cutscenes menu</a></div>
+<div>6: <a href="#customizeMenu">Customize menu</a></div>
 </div>
 <div id="menuItem">
-<div>7: <a href="#debugMenu">Debug menu</a></div>
+<div>7: <a href="#demosMenu">Cutscenes menu</a></div>
 </div>
 <div id="menuItem">
-<div>8: <a href="#revengeMenu">Enemy Prep menu</a></div>
+<div>8: <a href="#debugMenu">Debug menu</a></div>
 </div>
 <div id="menuItem">
-<div>9: <a href="#phaseMenu">Enemy phases menu</a></div>
+<div>9: <a href="#revengeMenu">Enemy Prep menu</a></div>
 </div>
 <div id="menuItem">
-<div>10: <a href="#enemyReinforceMenu">Enemy reinforcements menu</a></div>
+<div>10: <a href="#phaseMenu">Enemy phases menu</a></div>
 </div>
 <div id="menuItem">
-<div>11: <a href="#eventsMenu">Events menu</a></div>
+<div>11: <a href="#enemyReinforceMenu">Enemy reinforcements menu</a></div>
 </div>
 <div id="menuItem">
-<div>12: <a href="#fultonMenu">Fulton menu</a></div>
+<div>12: <a href="#eventsMenu">Events menu</a></div>
 </div>
 <div id="menuItem">
-<div>13: <a href="#heliSpaceFlagsMenu">Mission-prep features menu</a></div>
+<div>13: <a href="#fultonMenu">Fulton menu</a></div>
 </div>
 <div id="menuItem">
-<div>14: <a href="#motherBaseMenu">Mother Base menu</a></div>
+<div>14: <a href="#heliSpaceFlagsMenu">Mission-prep features menu</a></div>
 </div>
 <div id="menuItem">
-<div>15: <a href="#enemyPatrolMenu">Patrols and deployments menu</a></div>
+<div>15: <a href="#motherBaseMenu">Mother Base menu</a></div>
 </div>
 <div id="menuItem">
-<div>16: <a href="#playerRestrictionsMenu">Player restrictions menu</a></div>
+<div>16: <a href="#enemyPatrolMenu">Patrols and deployments menu</a></div>
 </div>
 <div id="menuItem">
-<div>17: <a href="#playerSettingsMenu">Player settings menu</a></div>
+<div>17: <a href="#playerRestrictionsMenu">Player restrictions menu</a></div>
 </div>
 <div id="menuItem">
-<div>18: <a href="#progressionMenu">Progression menu</a></div>
+<div>18: <a href="#playerSettingsMenu">Player settings menu</a></div>
 </div>
 <div id="menuItem">
-<div>19: <a href="#routeSetMenu">RouteSet menu</a></div>
+<div>19: <a href="#progressionMenu">Progression menu</a></div>
 </div>
 <div id="menuItem">
-<div>20: <a href="#sideOpsMenu">Side ops menu</a></div>
+<div>20: <a href="#routeSetMenu">RouteSet menu</a></div>
 </div>
 <div id="menuItem">
-<div>21: <a href="#soldierParamsMenu">Soldier parameters menu</a></div>
+<div>21: <a href="#sideOpsMenu">Side ops menu</a></div>
 </div>
 <div id="menuItem">
-<div>22: <a href="#supportHeliMenu">Support heli menu</a></div>
+<div>22: <a href="#soldierParamsMenu">Soldier parameters menu</a></div>
 </div>
 <div id="menuItem">
-<div>23: <a href="#timeScaleMenu">Time scale menu</a></div>
+<div>23: <a href="#supportHeliMenu">Support heli menu</a></div>
 </div>
 <div id="menuItem">
-<div>24: <a href="#weatherMenu">Weather menu</a></div>
+<div>24: <a href="#timeScaleMenu">Time scale menu</a></div>
+</div>
+<div id="menuItem">
+<div>25: <a href="#weatherMenu">Weather menu</a></div>
 </div>
 <div id="menuItem">
 </div>
@@ -396,6 +399,72 @@
 <div id="menuItem">
 <div>6: Apply FOV : 1-179</div>
 <div id="itemHelp">Applies FOV(degrees) proportionally to the different cam mode focal lengths.</div>
+</div>
+<div id="menuItem">
+</div>
+<div id="menuItem">
+</div>
+</div>
+<br/>
+<div id="menu">
+<div id="menuTitle">
+<div id="customizeMenu">Customize menu</div>
+<div id="menuHelp">Options for saving/loading to items in the idroid Customize menu</div>
+</div>
+<div id="menuItem">
+<div>1: <a href="#chimeraMenu">Chimera menu</a></div>
+</div>
+<div id="menuItem">
+<div>2: Load emblem : None found</div>
+<div id="itemHelp">Load emblem from MGS_TPP\mod\emblems . After loading emblem you must go to the normal Customize emblem system and OK it for it to reapply it. It will also regenerate it next time game is started.</div>
+</div>
+<div id="menuItem">
+<div>3: Save emblem : New</div>
+<div id="itemHelp">Save emblem to MGS_TPP\mod\emblems</div>
+</div>
+<div id="menuItem">
+<div>4: Load avatar : None Found</div>
+<div id="itemHelp">Load avatar from MGS_TPP\mod\avatars</div>
+</div>
+<div id="menuItem">
+<div>5: Save avatar : New</div>
+<div id="itemHelp">Save avatar to MGS_TPP\mod\avatars</div>
+</div>
+<div id="menuItem">
+</div>
+</div>
+<br/>
+<div id="menu">
+<div id="menuTitle">
+<div id="chimeraMenu">Chimera menu</div>
+<div id="menuHelp">Chimera is MGSVs weapon cusomization system, this menu lets you save/load from the Customize > Weapons idroid menu</div>
+</div>
+<div id="menuItem">
+<div>1: Weapon category : HANDGGUN, SMG, ASSAULT, SHOTGUN, GRENADELAUNCHER, SNIPER, MG, MISSILE</div>
+<div id="itemHelp">Changes which weapon category the slots refer to.</div>
+</div>
+<div id="menuItem">
+<div>2: Load to slot 1 : None found</div>
+<div id="itemHelp">Load chimera from MGS_TPP\mod\chimeras to specified slot</div>
+</div>
+<div id="menuItem">
+<div>3: Load to slot 2 : None found</div>
+</div>
+<div id="menuItem">
+<div>4: Load to slot 3 : None found</div>
+</div>
+<div id="menuItem">
+<div>5: Save from slot 1 : New</div>
+<div id="itemHelp">Save chimera of specified slot for to MGS_TPP\mod\chimeras </div>
+</div>
+<div id="menuItem">
+<div>6: Save from slot 2 : New</div>
+</div>
+<div id="menuItem">
+<div>7: Save from slot 3 : New</div>
+</div>
+<div id="menuItem">
+<div>8: Clear slot : SLOT1, SLOT2, SLOT3</div>
 </div>
 <div id="menuItem">
 </div>
@@ -2046,7 +2115,7 @@
 <div id="itemHelp">Allows items that haven't been developed to be selected.</div>
 </div>
 <div id="menuItem">
-<div>8: Load avatar : </div>
+<div>8: Load avatar : None Found</div>
 <div id="itemHelp">Load avatar from MGS_TPP\mod\avatars</div>
 </div>
 <div id="menuItem">
@@ -2597,7 +2666,7 @@
 <div id="itemHelp">Allows items that haven't been developed to be selected.</div>
 </div>
 <div id="menuItem">
-<div>8: Load avatar : </div>
+<div>8: Load avatar : None Found</div>
 <div id="itemHelp">Load avatar from MGS_TPP\mod\avatars</div>
 </div>
 <div id="menuItem">
