@@ -3,6 +3,8 @@ Infinite Heaven changelog
 r257 - 2021-08-04
 InfCamHook moved to IHHook r16 installation.
 
+fix: Custom soldier type RANDOM hanging on load if it chose off-by-1 lowest value.
+
 fix: MB GameEvents always triggering on any chance but 0 - thanks Adchap for the report
 
 fix: Sideop remaining active on clear on non Shooting Practice sideops while Shooting Practice Retry enabled - thanks countfuzzball for the report
